fix(fylo-data-storage-component): fix align-items at small devices

--- a/17-fylo-data-storage-component-master/style.css
+++ b/17-fylo-data-storage-component-master/style.css
@@ -160,6 +160,7 @@ section:last-child > p {
   main {
     width: 375px;
     flex-direction: column;
+    align-items: center;
   }
 
   section {
